<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_select_sort_name_ascending"
                android:title="@string/name_a_to_z" />
            <item
                android:id="@+id/menu_select_sort_name_descending"
                android:title="@string/name_z_to_a" />
            <item
                android:id="@+id/menu_select_sort_modified_ascending"
                android:title="@string/modified_oldest_first" />
            <item
                android:id="@+id/menu_select_sort_modified_descending"
                android:title="@string/modified_newest_first" />
            <item
                android:id="@+id/menu_select_sort_size_ascending"
                android:title="@string/size_smallest_first" />
            <item
                android:id="@+id/menu_select_sort_size_descending"
                android:title="@string/size_largest_first" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_select_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_select_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="never" />
</menu>